src/test/deca/library/invalid/result/trace_matrice_non_carree_output_expected.res
La trace de la matrice est: Impossible de calculer la trace d'une matrice non carrée
Erreur de dimension
